Refactored code and implemented settings page improvements
Changed some functions to be more in line with DRY methodology. I also added a delete button to the category list on the settings page.

--- a/index.html
+++ b/index.html
@@ -356,7 +356,10 @@
             <div class="cat-setting-title">Income Setting</div>
             <i class="fa-solid fa-circle-plus add-inc-cat"></i>
           </div>
-          <form class="add-cateogry add-cateogry-inc add-form-hidden">
+          <form
+            class="add-category add-category-inc add-form-hidden"
+            data-type="income"
+          >
             <label for="new-inc-icon"> Icon:</label>
             <input
               type="text"
@@ -395,7 +398,10 @@
             <div class="cat-setting-title">Expense Setting</div>
             <i class="fa-solid fa-circle-plus add-exp-cat"></i>
           </div>
-          <form class="add-cateogry add-cateogry-exp add-form-hidden">
+          <form
+            class="add-category add-category-exp add-form-hidden"
+            data-type="expense"
+          >
             <label for="new-exp-icon"> Icon:</label>
             <input
               type="text"
