added local storage support

--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
     <section class="section" id="statistics"></section>
     <section class="section" id="setting">
       <div class="setting-header">
-        <h1 class="title">Setting</h1>
+        <h1 class="setting-title">Setting</h1>
         <div class="setting-items">
           <div class="setting-item">Category</div>
           <div class="setting-item">Recurssing Data</div>
@@ -408,6 +408,7 @@
               name="new-exp-icon"
               id="new-exp-icon"
               placeholder=" Press 🪟+."
+              required
             />
             <i
               class="fa-solid fa-circle-check add-category-save-btn add-exp-cat-save-btn"
@@ -419,6 +420,7 @@
               name="new-exp-name"
               id="new-exp-name"
               placeholder="Enter new name"
+              required
             />
             <i
               class="fa-solid fa-circle-xmark add-category-cancel-btn add-exp-cat-cancel-btn"
