update setting and local storage

--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
       <div class="setting-item-header">
         <h3 class="category-setting-header">Category Setting</h3>
         <button class="category-save-btn">save</button>
-        <p class="change-status">There is unsaved change</p>
+        <p class="change-status"></p>
       </div>
 
       <div class="category-setting">
